--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -221,34 +222,45 @@
         </div>
 
 
-        <div id="footer">
+        <footer id="footer">
             <div id="top-footer">
                 <div id="ft-left">
                     <h1>Goodness. Greatness.</h1>
                     <div id="foot-mail">
-                        <input id="mail" type="text" placeholder="abc@gmail.com">
-                        <div id="subs">Subscribe</div>
+                      <div id="mail-input">
+                        <input type="email" id="mail" placeholder="Enter your email" required>
+                      </div>
+                      <button id="subs">Subscribe</button>
                     </div>
+                  </div>
+              <div id="ft-right">
+                <div id="ftr-links">
+                  <div class="ftr-col">
+                    <h2>About</h2>
+                    <a href="#">About Us</a>
+                    <a href="#">Catering</a>
+                    <a href="#">Order Now</a>
+                    <a href="#">Franchising</a>
+                  </div>
+                  <div class="ftr-col">
+                    <h2>Company</h2>
+                    <a href="#">Careers</a>
+                    <a href="#">News</a>
+                  </div>
+                  <div class="ftr-col">
+                    <h2>Resources</h2>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Tasty Rewards T&Cs</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms &amp; Conditions</a>
+                  </div>
                 </div>
-                <div id="ft-right">
-                    <div id="ftr-p1">
-                        <h2>About us</h2>
-                        <h2>Catering</h2>
-                        <h2>Order Now</h2>
-                        <h2>Franchising</h2>
-                        <h2>Careers</h2>
-                        <h2>News</h2>
-                    </div>
-                    <div id="ftr-p2">
-                        <h4>Contact us</h4>
-                        <h4>Tasty Rewards T&Cs</h4>
-                        <h4>Privacy Policy</h4>
-                        <h4>Terms & Conditions</h4>
-                    </div>
-                </div>
+              </div>
             </div>
-            <div id="bottom-footer"></div>
-        </div>
+            <div id="bottom-footer">
+              &copy; Company Name. All rights reserved.
+            </div>
+          </footer>
     </div>
 
     
